--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
-	<h1>Hello </h1>
+	<header>
+	<h1>Hello World </h1>
+	</header>
 </body>
 
 </html>
